[gd_scene load_steps=83 format=2]

[ext_resource path="res://Assets/DU-assets/Player Icons/Hades.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Characters/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Player/Level Up Manager.gd" type="Script" id=4]
[ext_resource path="res://images.jpg" type="Texture" id=5]
[ext_resource path="res://NotoSans-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://TH_3917011_3707003_3708011_3912011_3914011_800_800.jpg" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
height = 10.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -21, 4 ) ]
}

[sub_resource type="Animation" id=38]
resource_name = "player_attack_down"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 14 ), Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "player_attack_left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -21, 4 ), Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=40]
resource_name = "player_attack_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 21, 4 ), Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=41]
resource_name = "player_attack_up"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -6 ), Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "player_fly_down"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=16]
resource_name = "player_fly_left"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}

[sub_resource type="Animation" id=17]
resource_name = "player_fly_right"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=14]
resource_name = "player_fly_up"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 29 ]
}

[sub_resource type="Animation" id=3]
resource_name = "player_idle_down"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "player_idle_left"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "player_idle_right"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "player_idle_up"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=83]
resource_name = "player_meditation"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=25]
resource_name = "player_walk_down"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 8, 12, 8 ]
}

[sub_resource type="Animation" id=26]
resource_name = "player_walk_left"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 11, 15, 11 ]
}

[sub_resource type="Animation" id=27]
resource_name = "player_walk_right"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 2, 14, 10 ]
}

[sub_resource type="Animation" id=28]
resource_name = "player_walk_up"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 9, 13, 9 ]
}

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "player_fly_left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "player_fly_right"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "player_fly_down"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "player_fly_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "player_idle_left"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "player_idle_right"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "player_idle_down"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "player_idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 10 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "player_walk_left"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "player_walk_right"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "player_walk_down"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "player_walk_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
blend_point_0/node = SubResource( 29 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 30 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 31 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 32 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "player_attack_down"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "player_attack_left"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "player_attack_right"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "player_attack_up"

[sub_resource type="AnimationNodeAnimation" id=84]
animation = "player_meditation"

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachineTransition" id=67]

[sub_resource type="AnimationNodeStateMachineTransition" id=68]

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachineTransition" id=70]

[sub_resource type="AnimationNodeStateMachineTransition" id=71]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=72]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=73]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=74]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=75]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=76]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=77]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=78]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=79]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=80]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=81]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=82]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=85]

[sub_resource type="AnimationNodeStateMachineTransition" id=86]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/Fly/node = SubResource( 22 )
states/Fly/position = Vector2( -724, 90 )
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( -994, 90 )
states/Walk/node = SubResource( 33 )
states/Walk/position = Vector2( -994, 194 )
states/player_attack_down/node = SubResource( 55 )
states/player_attack_down/position = Vector2( -407, 295 )
states/player_attack_left/node = SubResource( 56 )
states/player_attack_left/position = Vector2( -787, -375 )
states/player_attack_right/node = SubResource( 57 )
states/player_attack_right/position = Vector2( -34, -327 )
states/player_attack_up/node = SubResource( 58 )
states/player_attack_up/position = Vector2( -7, -64 )
states/player_meditation/node = SubResource( 84 )
states/player_meditation/position = Vector2( -1273, -193 )
transitions = [ "Idle", "Fly", SubResource( 23 ), "Fly", "Idle", SubResource( 24 ), "Idle", "Walk", SubResource( 34 ), "Walk", "Idle", SubResource( 35 ), "Fly", "Walk", SubResource( 36 ), "Walk", "Fly", SubResource( 37 ), "Idle", "player_attack_up", SubResource( 59 ), "Idle", "player_attack_down", SubResource( 60 ), "Idle", "player_attack_right", SubResource( 61 ), "Fly", "player_attack_up", SubResource( 62 ), "Fly", "player_attack_right", SubResource( 63 ), "Fly", "player_attack_left", SubResource( 64 ), "Fly", "player_attack_down", SubResource( 65 ), "Idle", "player_attack_left", SubResource( 66 ), "Walk", "player_attack_left", SubResource( 67 ), "Walk", "player_attack_up", SubResource( 68 ), "Walk", "player_attack_right", SubResource( 69 ), "Walk", "player_attack_down", SubResource( 70 ), "player_attack_down", "Fly", SubResource( 71 ), "player_attack_down", "Idle", SubResource( 72 ), "player_attack_down", "Walk", SubResource( 73 ), "player_attack_left", "Walk", SubResource( 74 ), "player_attack_left", "Fly", SubResource( 75 ), "player_attack_left", "Idle", SubResource( 76 ), "player_attack_up", "Fly", SubResource( 77 ), "player_attack_up", "Idle", SubResource( 78 ), "player_attack_up", "Walk", SubResource( 79 ), "player_attack_right", "Fly", SubResource( 80 ), "player_attack_right", "Idle", SubResource( 81 ), "player_attack_right", "Walk", SubResource( 82 ), "Idle", "player_meditation", SubResource( 85 ), "player_meditation", "Idle", SubResource( 86 ) ]
start_node = "Idle"
graph_offset = Vector2( -1232, -408 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 10, 15 )

[sub_resource type="DynamicFont" id=54]
size = 14
font_data = ExtResource( 6 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="Damage Indicator" type="Timer" parent="Stats"]

[node name="Level Up Manager" type="Node2D" parent="Stats"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 41

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/player_attack_down = SubResource( 38 )
anims/player_attack_left = SubResource( 39 )
anims/player_attack_right = SubResource( 40 )
anims/player_attack_up = SubResource( 41 )
anims/player_fly_down = SubResource( 15 )
anims/player_fly_left = SubResource( 16 )
anims/player_fly_right = SubResource( 17 )
anims/player_fly_up = SubResource( 14 )
anims/player_idle_down = SubResource( 3 )
anims/player_idle_left = SubResource( 4 )
anims/player_idle_right = SubResource( 5 )
anims/player_idle_up = SubResource( 6 )
anims/player_meditation = SubResource( 83 )
anims/player_walk_down = SubResource( 25 )
anims/player_walk_left = SubResource( 26 )
anims/player_walk_right = SubResource( 27 )
anims/player_walk_up = SubResource( 28 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )
parameters/Fly/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -21, 4 )
shape = SubResource( 53 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Level" type="RichTextLabel" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = -71.0
margin_right = 87.0
margin_bottom = -47.0
custom_fonts/normal_font = SubResource( 54 )
fit_content_height = true

[node name="TextureProgress" type="TextureProgress" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -41.0
margin_right = 247.0
margin_bottom = -16.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[connection signal="enemyPowerLevel" from="." to="Stats/Level Up Manager" method="_on_Player_enemyPowerLevel"]
[connection signal="regen" from="." to="Stats" method="_on_Player_regen"]
[connection signal="update_stats" from="Stats" to="." method="_on_Stats_update_stats"]
[connection signal="timeout" from="Stats/Damage Indicator" to="Stats" method="_on_Damage_Indicator_timeout"]
[connection signal="level_up" from="Stats/Level Up Manager" to="Stats" method="_on_Level_Up_Manager_level_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
